--- a/docker/kenny.html
+++ b/docker/kenny.html
@@ -1,4 +1,4 @@
 <!DOCTYPE>
-<H1> Welcome to SCA Cloud School Application</h1>
+<H1> Welcome to SCA Cloud School Application, this is my first assessment</h1>
     
     <p></p>
